@@ -1,39 +1,38 @@
 package com.putoet.day12;
 
 import com.putoet.resources.ResourceLines;
+import com.putoet.utils.Timer;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class Day12 {
     public static void main(String[] args) {
-        final List<CourseDirective> directives = ResourceLines.list("/day12.txt").stream()
+        final var directives = ResourceLines.list("/day12.txt").stream()
                 .map(CourseDirective::of)
-                .collect(Collectors.toList());
+                .toList();
 
-        part1(directives);
-        part2(directives);
+        Timer.run(() -> part1(directives));
+        Timer.run(() -> part2(directives));
     }
 
     private static void part1(List<CourseDirective> directives) {
-        final Ship ship = new Ship();
+        final var ship = new Ship();
         directives.forEach(ship);
 
         System.out.println("the Manhattan distance between that location and the ship's starting position is " + ship.distance());
     }
 
     private static void part2(List<CourseDirective> directives) {
-        final Ship ship = new Ship();
-        final WayPoint wayPoint = new WayPoint();
+        final var ship = new Ship();
+        final var wayPoint = new WayPoint();
 
-        for (CourseDirective directive : directives) {
+        for (var directive : directives) {
             if (directive.command() == Command.FORWARD)
                 ship.forward(directive, wayPoint);
             else
                 wayPoint.accept(directive);
         }
 
-        System.out.println("the Manhattan distance between that location and the ship's starting position using waypoints is is " + ship.distance());
+        System.out.println("the Manhattan distance between that location and the ship's starting position using waypoints is " + ship.distance());
     }
-
 }
